--- a/views/metro_template.xml
+++ b/views/metro_template.xml
@@ -20,8 +20,8 @@
         <input style="font-size:10px;" type="text" name="stopID" size="4" maxlength="4" value="">
       </form>
 
-    <link rel="stylesheet" href="http://www.smsmybus.com/css/gadgetscss">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script> 
+    <link rel="stylesheet" href="http://www.smsmybus.com/css/gadgets.css">
+    <script type="text/javascript" src="http://www.smsmybus.com/js/jquery.js"></script> 
     <script type="text/javascript" src="http://www.smsmybus.com/js/jquery.timers-1.2.js"></script>
 
     <script type="text/javascript">
