ported the outreach interface to communicate with paying customers only

--- a/views/outreach.html
+++ b/views/outreach.html
@@ -61,7 +61,7 @@
   </tr></thead>
  {% for c in callers %}
   <tr>
-   <td>{{ c }}</td>
+   <td>{{ c.phone }}</td>
   </tr>
  {% endfor %}
  </table>
