added a 4x4 grid layout to the kiosk display maker

--- a/views/kiosk-grid.html
+++ b/views/kiosk-grid.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="description" content="Real time arrival estimates for the Madison Metro.">
     <meta name="keywords" content"Madison, Metro, transit, bus schedule, smsmybus">
-    <title>Madison Metro Monitor by SMSmybus</title>
+    <title>Madison Metro Monitor</title>
 
 	<meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
 	<meta name="robots" content="index, follow" />
@@ -16,8 +16,9 @@
 
     <script type="text/javascript">
       $(document).ready(function() {
-          getLocation('{{ stop1 }}','kiosk');
-          getLocation('{{ stop2 }}','kiosk');
+          {% for stop in stops %}
+              getLocation('{{ stop.stop_num }}','kiosk');
+          {% endfor %}
           setPage();
       });
       $(document).everyTime("121s",function() {
@@ -25,8 +26,9 @@
       });
 
       function setPage() {
-          update('{{ stop1 }}', '{{ direction1 }}','kiosk');
-          update('{{ stop2 }}', '{{ direction2 }}','kiosk');
+          {% for stop in stops %}
+              update('{{ stop.stop_num }}', '{{ stop.direction }}','kiosk');
+          {% endfor %}
       }
     </script>
 </head>
@@ -39,18 +41,25 @@
 <div class="colmask doublepage">
 	<div class="colleft">
 		<div class="col1">
-            <div class="estimates" id="{{ stop1 }}-estimates"> </div>
+            <div class="estimates" id="{{ stops.0.stop_num }}-estimates">refreshing... </div>
 		</div>
 		<div class="col2">
-           <div class="estimates" id="{{ stop2 }}-estimates"> </div>
+           <div class="estimates" id="{{ stops.1.stop_num }}-estimates">refreshing... </div>
 		</div>
+    <div class="col1" style="clear:both;">
+            <div class="estimates" id="{{ stops.2.stop_num }}-estimates">refreshing...</div>
+      </div>
+      <div class="col2">
+            <div class="estimates" id="{{ stops.3.stop_num }}-estimates">refreshing...</div>
+      </div>
+  </div>
 	</div>
 </div>
 <div id="footer">
 <p>Special thanks to The City of Madison for great buses and for providing the GPS data that powers this service</p>
    <div id="powered-by">
      <a href=http://mymetrobus.com><img src="/img/madison_metro.png" alt="Madison Metro" height="30"></a>
-     <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus logo" height="30"></a>
+     <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
    </div>
 
    <div id="me">
