--- a/views/kiosk-error.html
+++ b/views/kiosk-error.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "https://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="https://www.w3.org/1999/xhtml" xml:lang="en-GB">
 <head>
     <meta name="description" content="Real time arrival estimates for the Madison Metro.">
     <meta name="keywords" content"Madison, Metro, transit, bus schedule, smsmybus">
@@ -24,12 +24,12 @@
 <p>Special thanks to The City of Madison for great buses and for providing the GPS data that powers this service</p>
    <div id="powered-by">
      <a href=http://mymetrobus.com><img src="/img/madison_metro.png" alt="Madison Metro" height="30"></a>
-     <a href=http://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
+     <a href=https://smsmybus.com><img src="/img/smsmybus.png" alt="smsmybus.com logo" height="30"></a>
    </div>
 
    <div id="me">
-    <a href=http://www.gregtracy.com>Greg Tracy</a> - <a href=http://smsmybus.com>smsmybus</a> - <a href=http://twitter.com/gregtracy>@gregtracy</a><br>
-    <a href=http://imby.info/p/prestonaustin>Preston Austin - this interface</a> - <a href=http://twitter.com/gl33p>@gl33p</a>
+    <a href=http://www.gregtracy.com>Greg Tracy</a> - <a href=https://smsmybus.com>smsmybus</a> - <a href=https://twitter.com/gregtracy>@gregtracy</a><br>
+    <a href=https://twitter.com/gl33p>Preston Austin - this interface</a> - <a href=https://twitter.com/gl33p>@gl33p</a>
    </div>
 
    <div id="contact-container">
